fire game and monkey game

--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
     <article>
 
         <div>
+            <img src="monkyGame/imgs/typing_balloon.png">
+            <p>Typing Balloon</p>
+            <a href="monkyGame/index.html"><button> Start</button></a>
+        </div>
+
+        <div>
             <img src="project js/background2.gif">
             <p>Escap Dream</p>
             <a href="Escape game/play.html"><button>Start</button></a>            
+        </div>
+
+        <div>
+            <img src="fire/imgs/logo.PNG">
+            <p>Super Heroine</p>
+            <a href="fire/index.html"><button>Start</button></a>            
         </div>
         
     </article>
