--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         </div>
 
         <div>
+            <img src="fighter game/img/fighter.png">
+            <p>fighters</p>
+            <a href="fighter game/game.html"><button>Start</button></a>            
+        </div>
+        
+        <div>
             <img src="project js/background2.gif">
             <p>Escap Dream</p>
             <a href="Escape game/play.html"><button>Start</button></a>            
