--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <article>
 
         <div>
+            <img src="Mario game/images/mario.PNG">
+            <p>Super Mario</p>
+            <a href="Mario game/index.html"><button> Start</button></a>
+        </div>
+        
+        <div>
             <img src="monkyGame/imgs/typing_balloon.png">
             <p>Typing Balloon</p>
             <a href="monkyGame/index.html"><button> Start</button></a>
