typing Speed Test and Flappy bird

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
         </div>
 
         <div>
+            <img src="TypingSpeedTest/assets/typing_ jungle.jfif">
+            <p>Typing Jungle</p>
+            <a href="TypingSpeedTest/index.html"><button> Start</button></a>
+        </div>
+        
+        <div>
+            <img src="Flappy Bird/imgs/ground_bird.jpeg">
+            <p>Angry Bird</p>
+            <a href="Flappy Bird/index.html"><button>Start</button></a>            
+        </div>
+        <div>
             <img src="fighter game/img/fighter.png">
             <p>fighters</p>
             <a href="fighter game/game.html"><button>Start</button></a>            
