add escape image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         
         <div>
-            <img src="project js/background2.gif">
+            <img src="Escape game/background2.gif">
             <p>Escap Dream</p>
             <a href="Escape game/play.html"><button>Start</button></a>            
         </div>
