--- a/Escape game/play.html
+++ b/Escape game/play.html
@@ -20,7 +20,7 @@
             <div class="parent">
                 <div class="child"> 
                     
-                    <img src="3.PNG" alt="">
+                    <img src="imgs/3.PNG" alt="">
                     <p id="startgame" onclick="viduoplay()">Start Game</p>
                     
                 </div>
