escape game image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div>
             <img src="Escape game/background2.gif">
             <p>Escap Dream</p>
-            <a href="Escape game/play.html"><button>Start</button></a>            
+            <a href="Escape game/imgs/play.html"><button>Start</button></a>            
         </div>
 
         <div>
