--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
         
         <div>
-            <img src="Escape game/background2.gif">
+            <img src="Escape game/imgs/background2.gif">
             <p>Escap Dream</p>
-            <a href="Escape game/imgs/play.html"><button>Start</button></a>            
+            <a href="Escape game/play.html"><button>Start</button></a>            
         </div>
 
         <div>
